--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -15,8 +15,7 @@
         android:gravity="center"
         android:orientation="vertical"
         android:paddingTop="68dp"
-        tools:ignore="HardcodedText"
-        >
+        tools:ignore="HardcodedText">
 
         <TextView
             android:layout_width="wrap_content"
@@ -26,61 +25,62 @@
             android:alpha="0"
             android:fontFamily="@font/poppins_medium"
             android:text="Choose your play mode"
-            android:textStyle="bold"
             android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
             android:textColor="#101010"
             android:textSize="20sp"
+            android:textStyle="bold"
 
-            tools:alpha="1"
-            />
-
+            tools:alpha="1" />
 
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_choice1"
-            android:layout_width="200dp"
+            android:layout_width="175dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:textAllCaps="false"
-            android:fontFamily="@font/poppins_medium"
-            android:textSize="18dp"
-            android:scaleX="0"
-            android:scaleY="0"
-            android:textStyle="bold"
             android:layout_marginTop="48dp"
             android:background="@drawable/button_1"
+            android:fontFamily="@font/poppins_medium"
+            android:scaleX="0"
+            android:scaleY="0"
             android:text="Offline"
-            />
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="18dp"
+            android:textStyle="bold" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_choice2"
-            android:layout_width="200dp"
-            android:scaleX="0"
-            android:scaleY="0"
-            android:textAllCaps="false"
-            android:textStyle="bold"
-            android:fontFamily="@font/poppins_medium"
-            android:textSize="18dp"
-            android:textColor="#2B2A2A"
+            android:layout_width="175dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:background="@drawable/button_2"
+            android:fontFamily="@font/poppins_medium"
+            android:scaleX="0"
+            android:scaleY="0"
             android:text="Online"
-            />
+            android:textAllCaps="false"
+            android:textColor="#FF3D00"
+            android:textSize="18dp"
+            android:textStyle="bold" />
 
 
-        <androidx.cardview.widget.CardView
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:id="@+id/card_view"
-            android:layout_gravity="center"
             android:layout_width="50dp"
-            card_view:cardBackgroundColor="@color/white"
             android:layout_height="50dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginBottom="25dp"
-            android:elevation="10dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="25dp"
+            android:layout_marginBottom="30dp"
+            android:elevation="4dp"
+            card_view:cardBackgroundColor="@color/white"
             card_view:cardCornerRadius="40dp">
 
+            <pl.droidsonroids.gif.GifImageView
+                android:id="@+id/seting_gifview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="7.5dp"
+                android:src="@drawable/settings_gif" />
 
 
         </androidx.cardview.widget.CardView>
