--- a/app/src/main/res/layout/activity_offline_game.xml
+++ b/app/src/main/res/layout/activity_offline_game.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:weightSum="10"
     android:layout_height="match_parent"
     tools:context=".OfflineGameActivity">
 
