--- a/app/src/main/res/layout/activity_offline_game.xml
+++ b/app/src/main/res/layout/activity_offline_game.xml
@@ -58,8 +58,8 @@
             android:orientation="vertical"
             android:layout_gravity="center"
             android:gravity="center"
-            android:layout_marginTop="25dp"
-            android:layout_marginBottom="7.5dp"
+            android:layout_marginTop="27.5dp"
+            android:layout_marginBottom="13dp"
             android:background="@drawable/count_background"
             android:layout_height="match_parent"
             android:layout_weight="2">
@@ -104,11 +104,9 @@
                 android:layout_gravity="center"
                 android:layout_height="0dp"
                 android:src="@drawable/profile_img"
-                app:civ_border_color="#FFAA8F"
-                app:civ_border_width="1dp"
                 app:civ_shadow="true"
                 app:civ_shadow_radius="1dp"
-                app:civ_shadow_color="#FF3D00"/>
+              />
 
             <View
                 android:layout_width="match_parent"
@@ -152,9 +150,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_weight="4.5"
+        android:layout_marginRight="35dp"
+        android:layout_marginLeft="35dp"
+        android:layout_weight="4"
         android:weightSum="10"
         android:orientation="vertical"
         android:background="@drawable/grid">
@@ -384,17 +382,16 @@
                 android:layout_weight="0.15"></View>
 
             <com.mikhaellopez.circularimageview.CircularImageView
-                android:id="@+id/player_one_img_txt"
+                android:id="@+id/player_one_img"
                 android:layout_width="match_parent"
                 android:layout_weight="6.85"
                 android:layout_gravity="center"
                 android:layout_height="0dp"
                 android:src="@drawable/profile_img"
-                app:civ_border_color="#FFAB91"
-                app:civ_border_width="1dp"
+
                 app:civ_shadow="true"
                 app:civ_shadow_radius="1dp"
-                app:civ_shadow_color="#FF3D00"/>
+                />
 
             <View
                 android:layout_width="match_parent"
@@ -431,8 +428,8 @@
             android:orientation="vertical"
             android:layout_gravity="center"
             android:gravity="center"
-            android:layout_marginTop="25dp"
-            android:layout_marginBottom="7.5dp"
+            android:layout_marginTop="27.5dp"
+            android:layout_marginBottom="13dp"
             android:background="@drawable/count_background"
             android:layout_height="match_parent"
             android:layout_weight="2">
@@ -440,14 +437,13 @@
             <TextView
                 android:id="@+id/player_one_win_count_txt"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="6"
-                android:textSize="20dp"
-                android:textColor="#353535"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:gravity="center"
                 android:fontFamily="@font/poppins_medium"
-                ></TextView>
+                android:gravity="center"
+                android:text="6"
+                android:textColor="#353535"
+                android:textSize="20dp"></TextView>
         </LinearLayout>
 
 
@@ -467,14 +463,14 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.5"></View>
+        android:layout_weight="0.6"></View>
 
 
     <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_width="50dp"
         android:layout_height="0dp"
-        android:layout_weight="0.75"
+        android:layout_weight="0.65"
         android:layout_gravity="center"
         android:elevation="4dp"
         card_view:cardBackgroundColor="@color/white"
@@ -495,7 +491,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.75"></View>
+        android:layout_weight="1.25"></View>
 
 
 
