--- a/app/src/main/res/layout/activity_aiget_player_name.xml
+++ b/app/src/main/res/layout/activity_aiget_player_name.xml
@@ -84,7 +84,10 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginLeft="40dp"
+            android:maxLines="1"
+            android:maxLength="10"
             android:hint="Nick Name"
+            android:singleLine="true"
             android:textColor="#5C5C5C"
             android:textColorHint="#6E6E6E"
             android:textSize="18dp"
