--- a/app/src/main/res/layout/activity_offline_game.xml
+++ b/app/src/main/res/layout/activity_offline_game.xml
@@ -58,7 +58,7 @@
             android:orientation="vertical"
             android:layout_gravity="center"
             android:gravity="center"
-            android:layout_marginTop="27.5dp"
+            android:layout_marginTop="22.5dp"
             android:layout_marginBottom="13dp"
             android:background="@drawable/count_background"
             android:layout_height="match_parent"
@@ -117,18 +117,14 @@
                 android:id="@+id/player_two_name_txt"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="2.5"
-                android:text="Jason B."
-                android:textSize="16dp"
-                android:textColor="#353535"
                 android:layout_gravity="center"
-                android:gravity="center"
+                android:layout_weight="2.65"
                 android:fontFamily="@font/poppins_medium"
-                ></TextView>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="0.15"></View>
+                android:gravity="center"
+                android:text="Jason B."
+                android:textColor="#353535"
+                android:textSize="14dp"></TextView>
+
 
         </LinearLayout>
 
@@ -402,18 +398,15 @@
                 android:id="@+id/player_one_name_txt"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="2.5"
+                android:layout_weight="2.65"
                 android:text="Jason B."
-                android:textSize="16dp"
+                android:textSize="14dp"
                 android:textColor="#353535"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:fontFamily="@font/poppins_medium"
                 ></TextView>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="0.15"></View>
+
 
         </LinearLayout>
 
@@ -428,7 +421,7 @@
             android:orientation="vertical"
             android:layout_gravity="center"
             android:gravity="center"
-            android:layout_marginTop="27.5dp"
+            android:layout_marginTop="22.5dp"
             android:layout_marginBottom="13dp"
             android:background="@drawable/count_background"
             android:layout_height="match_parent"
